--- a/code/020_viz_effect_size_overall.Rmd
+++ b/code/020_viz_effect_size_overall.Rmd
@@ -119,7 +119,7 @@ data %>%
 n_ind <- length(unique(data$ind_sub)); 
 
 fname <- paste0(dir.fig, 'es_comb_', design, '_', today, vv, '.png'); fname
-func_ggsave(fname, w = 6, h = 5.5/2/5*n_ind, dpi = 300, save_png = T)
+func_ggsave(fname, w = 6, h = 5.5/2/6*n_ind, dpi = 300, save_png = T)
 ```
 
 
@@ -162,7 +162,8 @@ subgroups <- c(
 
 ind_sub_levels <- c("TMD", "Anxiety", "Fatigue", "Confusion", "Anger", 
                     "Depression",  ## for IALE
-                    "Stress", "Negative Affect", 
+                    "Stress", 
+                    "Negative Affect", 
                     "Positive Affect", 
                     "Restorative Effect", 
                     # "Depression", 
@@ -174,7 +175,8 @@ for (subgroup_select in subgroups) {
   ## subset data
   ma_result_all_sub <- ma_result_all %>%
     dplyr::filter(subgroup != 'Overall', 
-                  group_name == subgroup_select)
+                  group_name == subgroup_select) %>%
+    dplyr::filter(ind_sub %in% ind_sub_levels)
   
   ## postfix to be added to figure names
   postfix_group <- paste0("_subgroup_", subgroup_select); postfix_group
