--- a/code/011_MA_correlation.Rmd
+++ b/code/011_MA_correlation.Rmd
@@ -38,7 +38,12 @@ output: html_document
 ## 
 exp_sub_mods_cor <- exp_sub_mods_coef %>%
   dplyr::filter(!is.na(mean)) %>%
+  dplyr::filter(MH_tool_o1 %in% mh_tool) %>%
   dplyr::filter(mean <=1 & mean >=-0.6) %>% ## ???
+  # dplyr::mutate() %>%
+  dplyr::mutate(
+      nature_type_o1 = case_when(
+        str_to_sentence(nature_type_o1) %in% c("Other natural space/element", "Public natural spaces") ~ "Greenspace", T ~ nature_type_o1)) %>%
   as.data.frame()
 
 MH_tool_o1_list <- unique(exp_sub_mods_cor$MH_tool_o1); MH_tool_o1_list
@@ -149,11 +154,12 @@ p_forest <- meta::forest(
 # p_forest
 
 dev.off()
+
 ```
 
 
   https://wviechtb.github.io/metafor/reference/forest.rma.html
-```{r - forest - metafore, warning=FALSE}
+```{r - forest - metafor, warning=FALSE}
 ### forest plot --------------------------------------------------------------------------
 # forest(res)
 # forest(res, addpred=TRUE, header=TRUE)
@@ -273,20 +279,12 @@ for (subgroup_select in subgroups) {
   print(subgroup_select)
   
   ma_cor_data <- exp_sub_mods_cor %>%
-    dplyr::mutate(
-      ##' further clean the nature types ---- ??? need to double-check original paper to
-      ##'   correct these classes 
-      nature_type_o1 = case_when(
-        str_to_sentence(nature_type_o1) %in% c(
-          "Other natural space/element", 
-          "Public natural spaces") ~ "Greenspace",
-        T ~ nature_type_o1
-                  )) %>%
     dplyr::filter(!is.na(exposure_o1)) %>%
     dplyr::mutate(subgroup_selected = !!sym(subgroup_select)) 
   
   unique(ma_cor_data$exposure_o1)
   unique(ma_cor_data$nature_type_o1)
+  ind_name <- unique(ma_cor_data$MH_indicator_o1)
   
   ma_cor <- meta::metacor(
     data = ma_cor_data,
@@ -330,7 +328,7 @@ for (subgroup_select in subgroups) {
   ### 1. overall model data ----------------------------------------------------------------
   ma_cor.df <- data.frame(
     tool = paste(MH_tool_o1_list, collapse = ";"), 
-    ind_sub = paste(MH_tool_o1_list, collapse = ";"),
+    ind_sub = paste(ind_name, collapse = ";"),
     group_name = '',
     subgroup = 'Overall',
     es.mean = ma_cor$TE.random,
@@ -356,7 +354,7 @@ for (subgroup_select in subgroups) {
   if (add_subgroup_analysis == T) {
     ma_cor.df.subgroup <- data.frame(
       tool = paste(MH_tool_o1_list, collapse = ";"), 
-      ind_sub = paste(MH_tool_o1_list, collapse = ";"), 
+      ind_sub = paste(ind_name, collapse = ";"), 
       group_name = subgroup_select,
       subgroup = names(ma_cor$TE.common.w),
       es.mean = as.numeric(ma_cor$TE.random.w),
@@ -441,7 +439,7 @@ source('./code/func_plot_ma.R')
 source('./code/func_color_bygroup.R')
 
 mh_tool_ls <- c('GHQ-12')
-mh_tool_ls <- c('GHQ-12', "SF-12", "SF-36", 'WEMWBS', 'WHO-5')
+mh_tool_ls <- c('GHQ-12', "SF-12", "SF-36", 'WEMWBS', 'WHO-5', 'PSS')
 
 fs <- list.files(path = "./data/0302-MA-output/", 
                  pattern = paste('^ma_result.*_', mh_tool_ls, collapse = '|', sep = ''), 
@@ -459,25 +457,88 @@ for (f in fs) {
 func_color_bygroup(df = ma_result_all, column_name = 'subgroup')
 v_just <- length(unique(ma_result_all$subgroup))/5*0.05
 
-## pool all data together 
-ma_result_all %>%
-  # dplyr::filter(subgroup == 'Overall') %>%
+
+##
+## pool all data together  ---------------------------------------------------------------
+data <- ma_result_all %>%
+  # dplyr::filter(ind_sub %in% ind_for_presentation) %>%
+  dplyr::filter(subgroup == 'Overall') 
+x_limit_max <- max(abs(data$es.lower), abs(data$es.upper), na.rm = T) * 1.2
+
+data %>%
   plot_effect_size_overall(data = ., 
-                           color_var = 'subgroup', subgroup = '',
+                           color_var = 'tool', 
+                           text_size = 11,
                            show_legend = T) +
-  theme(legend.position = c(0, 0.1+v_just),
-        legend.justification = "left",
-        plot.margin = margin(0, 0, 0, 0, "pt"), 
-        ) +
-  # facet_wrap(~group_name) +
-  scale_colour_manual(values = nature_type_color) +
-  guides(color = guide_legend(title=subgroup_label))
+  scale_x_continuous(limits = c(-x_limit_max, x_limit_max)) +
+  theme(legend.position.inside = c(0.85, 0.9),
+        # legend.spacing.y = unit(0, 'cm'),
+        legend.spacing.x = unit(0.2, 'cm'),
+        legend.key.size = unit(0.2, 'cm'),
+        plot.margin = margin(t=0, r=0, b=0, l=0, "pt")) +
+  guides(color = guide_legend(title="MH Tools"))
+```
 
 
+```{r - subgroup plot - by group}
+subgroups <- unique(ma_result_all$group_name); subgroups
+subgroups <- subgroups[subgroups!='']
+ind_sub_levels <- unique(ma_result_all$ind_sub); ind_sub_levels
 
-fname <- paste0(dir.fig, 'es_combined_', paste(MH_tool_o1_list, collapse = "_"), '_', postfix_subgroup, '_',
-                today, '.png'); fname
-func_ggsave(fname, w = 6, h = 5.5, save_png = T)
+
+library(RColorBrewer)
+# Define the original Dark2 palette with maximum colors
+dark2_palette  <- brewer.pal(8, "Dark2")
+paired_palette <- brewer.pal(12, "Paired")
+combined_palette <- c(dark2_palette, paired_palette)
+# Create a color interpolation function
+color_interpolator <- colorRampPalette(dark2_palette)
+
+
+for (subgroup_select in subgroups) {
+
+  ## subset data
+  ma_result_all_sub <- ma_result_all %>%
+    dplyr::filter(subgroup != 'Overall',
+                  group_name == subgroup_select) %>%
+    dplyr::filter(ind_sub %in% ind_sub_levels)
+  
+  n <- unique(ma_result_all_sub$subgroup) %>% length()
+  # # Generate more colors, e.g., 20 colors
+  # more_colors <- color_interpolator(n)
+  more_colors <- combined_palette[1:n]
+
+  ma_result_all_sub %>%
+    plot_effect_size_overall(
+      data = ., 
+      color_var = 'subgroup', 
+      subgroup = 'subgroup', 
+      facet_bygroup = T, 
+      facet_scales = 'free',
+      text_size = 11,
+      add_gradient_bg = F,
+      show_legend = T) +
+    theme(
+      legend.position = c(2/3, 0.15),
+      legend.spacing.y = unit(0, 'cm'),
+      legend.spacing.x = unit(0, 'cm'),
+      legend.key.size = unit(0.01, 'cm'), 
+      legend.key.width = unit(0.01, 'cm'),
+      legend.justification = "left", 
+      legend.title=element_text(size=8.5, face = 'bold'),
+      legend.text=element_text(size=8),
+      plot.margin = margin(0, 0, 0, 0, "pt"), 
+          ) +
+    facet_wrap(~ind_sub, ncol = 3) +
+    scale_colour_manual(values = more_colors) +
+    guides(color = guide_legend(title=subgroup_label))
+  
+  
+  
+  fname <- paste0(dir.fig, 'es_comb_css_', subgroup_select, '_', postfix_subgroup, '_', today, '.png'); fname
+  func_ggsave(fname, w = 6, h = 5.5, save_png = T)
+
+}
 ```
 
 
