--- a/code/010_MA_data.Rmd
+++ b/code/010_MA_data.Rmd
@@ -494,19 +494,19 @@ df %>%
 ```{r nature_quantity}
 
 df_q <- df_exp %>%
-  select(1:2, Indicator, Tools, nature_type, nature_quantity, 
+  dplyr::select(1:2, Indicator, Tools, nature_type, nature_quantity, 
          # buffer, buffer_unit, 
          exposure_type) %>%
-  filter(!nature_quantity %in% c('', NA, 'NA'))
+  dplyr::filter(!nature_quantity %in% c('', NA, 'NA'))
 
 df_q_ndvi <- df_q %>%
-  filter(str_detect(nature_quantity, pattern = regex("NDVI|EVI|Percent", ignore_case = TRUE)))
+  dplyr::filter(str_detect(nature_quantity, pattern = regex("NDVI|EVI|Percent", ignore_case = TRUE)))
 
 df_q_ndvi_ <- df_q_ndvi %>%
-  select(Tools, nature_quantity) %>%
+  dplyr::select(Tools, nature_quantity) %>%
   expand_col_to_long(data = ., target_col = 'Tools') %>%
   expand_col_to_long(data = ., target_col = 'nature_quantity') %>%
-  filter(str_detect(nature_quantity, pattern = regex("NDVI|EVI|Percent", ignore_case = TRUE))) %>%
+  dplyr::filter(str_detect(nature_quantity, pattern = regex("NDVI|EVI|Percent", ignore_case = TRUE))) %>%
   group_by(Tools, nature_quantity) %>%
   tally() %>%
   as.data.frame() %>%  
@@ -603,6 +603,11 @@ save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
 
 f <- gsub('RData', 'rds', f); f
 saveRDS(exp_sub_df, file = f)
+
+
+## for RA/Carl
+f <- gsub('rds', 'csv', f); f
+readr::write_csv(x = exp_sub_df, file = f)
 ```
 
 
